Fix window controls are too big on Ubuntu

--- a/chrome/window-controls/window-controls.css
+++ b/chrome/window-controls/window-controls.css
@@ -6,14 +6,6 @@
     min-width: 14px !important;
 }
 
-/* For Ubuntu */
-/* .titlebar-button > .toolbarbutton-icon {
-    height: 24px !important;
-    min-height: 24px !important;
-    width: 24px !important;
-    min-width: 24px !important;
-} */
-
 #titlebar {
     -moz-appearance: none !important;
 }
@@ -23,13 +15,6 @@
     background: none !important;
     -moz-context-properties: fill, fill-opacity !important;
 }
-
-/* For Ubuntu */
-/* .titlebar-button {
-    padding: 0px 2px !important;
-    background: none !important;
-    -moz-context-properties: fill, fill-opacity !important;
-} */
 
 .titlebar-buttonbox {
     display: flex;
